# macemu

./: .gitignore
BasiliskII/src/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  adb.cpp  cdrom.cpp  cmake_install.cmake  disk.cpp  emul_op.cpp  extfs.cpp  io.cpp  machine.cpp  main.cpp  prefs.cpp  prefs_items.cpp  rom_patches.cpp  rtc.cpp  sony.cpp  timer.cpp  yame.cpp
BasiliskII/src/CrossPlatform/: sigsegv.cpp  video_blit.cpp  video_vosf.h  vm_alloc.cpp
BasiliskII/src/SDL/: audio_sdl.cpp  common.cpp  video_sdl2.cpp
BasiliskII/src/Unix/: Makefile.in  compemu.cpp  compstbl.cpp  comptbl.h  configure.ac  ether_unix.cpp  extfs_unix.cpp  main_unix.cpp  pc.txt  prefs_editor_gtk.cpp  prefs_unix.cpp  serial_unix.cpp  sys_unix.cpp  sysdeps.h  timer_unix.cpp
BasiliskII/src/Unix/Linux/: scsi_linux.cpp
BasiliskII/src/Windows/: configure.ac  sysdeps.h
BasiliskII/src/chips/: #scc.cpp#  .#scc.cpp  ardbeg.cpp  asc.cpp  easc.cpp  f108.cpp  glu.cpp  io.cpp  iop.cpp  iop.h  jaws.cpp  lc.cpp  mcu.cpp  mdu.cpp  memcjr.cpp  msc.cpp  ncr5380.cpp  oss.cpp  powerbook.cpp  rbv.cpp  rtc.cpp  scc.cpp  scc.h  scc_impl.h  sonic.cpp  sonora.cpp  swim.cpp  v8.cpp  via.cpp  via.h  via1.cpp  via2.cpp  z8530.cpp
BasiliskII/src/chips/include/: ardbeg.hpp  asc.hpp  f108.hpp  glu.hpp  iop.hpp  jaws.hpp  lc.hpp  mcu.hpp  mdu.hpp  memcjr.hpp  msc.hpp  ncr5380.hpp  oss.hpp  powerbook.hpp  rbv.hpp  scc.hpp  scc_impl.hpp  sonic.hpp  sonora.hpp  swim.hpp  v8.hpp  via.hpp  via1.hpp  via2.hpp  z8530.hpp
BasiliskII/src/docs/: index.html  memory.html  scc.html  scc.md  style.css  via.md
BasiliskII/src/include/: adb.h  audio.h  cdrom.h  clip.h  disk.h  emul_op.h  ether.h  extfs.h  include.hpp  io.hpp  machine.hpp  macos_util.h  main.h  motherboard.hpp  prefs.h  rom_patches.h  rsrc_patches.h  rtc.hpp  scc.h  scsi.h  serial.h  sony.h  timer.h  via.h  video.h  xpram.h
BasiliskII/src/include/devices/: adb.hpp  serial.hpp  socket.hpp
BasiliskII/src/mmu_cpu/: arith.h  basilisk_glue.cpp  cpu_emulation.h  disasm.cpp  ea.cpp  ea.h  ex_stack.h  exception.cpp  exception.h  intop.h  mbus.cpp  mbus.h  mc68040.md  memory.cpp  memory.h  newcpu.cpp  newcpu.h  op.h  op_arithmetic.cpp  op_bcd.cpp  op_bf.cpp  op_bits.cpp  op_branch.cpp  op_math.cpp  op_move.cpp  spcflags.h
BasiliskII/src/mmu_cpu/compiler/: arithmetic.cpp  bcd.cpp  bitfield.cpp  bits.cpp  branch.cpp  compemu.h  compemu_fpp.cpp  compemu_support.cpp  compiler.cpp  compiler.h  jit.cpp  jit.h  jit_arithmetic.cpp  jit_bcd.cpp  jit_bf.cpp  jit_bits.cpp  jit_branch.cpp  jit_ea.cpp  jit_move.cpp  jit_proto.h  move.cpp  prototypes.h
BasiliskII/src/mmu_cpu/fpu/: core.h  exceptions.h  flags.h  fpu.h  fpu_ieee.cpp  fpu_ieee.h  fpu_mpfr.cpp  fpu_mpfr.h  impl.h  mathlib.h  mpfr_inline.h  rounding.h
BasiliskII/src/mmu_cpu/mmu/: mmu_68040.cpp  mmu_68040.h
BasiliskII/src/mmu_cpu/test/: add.cpp  addi.cpp  and.cpp  andi.cpp  asm.pl  bchg.cpp  bclr.cpp  bitfields.cpp  bset.cpp  btst.cpp  cas.cpp  cas2.cpp  chk.cpp  chk2.cpp  clr.cpp  cmp.cpp  cmp2.cpp  cmpi.cpp  cpu1.cpp  cpu_impl.cpp  dbcc.cpp  div.cpp  eor.cpp  eori.cpp  exception.cpp  exg.cpp  ext.cpp  jmp.cpp  lea.cpp  link.cpp  math.cpp  mmu.cpp  move.cpp  movea.cpp  movem.cpp  movep.cpp  mul.cpp  nbcd.cpp  neg.cpp  not.cpp  (+17 more)
BasiliskII/src/new_cpu/: .gitignore  Makefile  basilisk_glue.cpp  common.cpp  common.hpp  cpu_emulation.h  exceptions.cpp  exceptions.hpp  fpu.cpp  fpu.hpp  inst.cpp  inst_cmn.hpp  intel.h  mem.cpp  mem.hpp  memory.hpp  mmu.cpp  mmu.hpp  op.h  op_arith.cpp  op_bcd.cpp  op_bits.cpp  op_move.cpp  registers.hpp  test.sh  test_mmu
BasiliskII/src/new_cpu/cov/: index-sort-f.html  index-sort-l.html  index.html
BasiliskII/src/new_cpu/fpu/: 68881.hpp  common.cpp  core.cpp  fpu.hpp  packed_decimal.cpp
BasiliskII/src/new_cpu/mmu/: mmu.cpp  mmu.hpp
BasiliskII/src/new_cpu/test_src/: abcd.cpp  add.cpp  adda.cpp  addi.cpp  addq.cpp  addx.cpp  and.cpp  andi.cpp  asl.cpp  asr.cpp  bcc.cpp  bchg.cpp  bclr.cpp  bfchg.cpp  bfclr.cpp  bfexts.cpp  bfextu.cpp  bfffo.cpp  bfins.cpp  bfset.cpp  bftst.cpp  bkpt.cpp  bra.cpp  bset.cpp  bsr.cpp  btst.cpp  callm.cpp  cas.cpp  cas2.cpp  chk.cpp  init.h  test.cpp  test_common.hpp  test_main.cpp
BasiliskII/src/peripheral/: adb.cpp
BasiliskII/src/rom/: adb.cpp  addr.txt  asc.cpp  boot.cpp  boot2.cpp  check_flag.cpp  data.cpp  data.hpp  dump.txt  easc.cpp  get_hw_info.cpp  get_hw_info2.cpp  get_model_id.cpp  get_scc_addr.cpp  hwcheck.cpp  init.cpp  init2.cpp  init_hw.cpp  init_hw2.cpp  init_hw3.cpp  init_mmu.cpp  init_scc_iop_fw.cpp  io.md  powerbook.cpp  prototype.hpp  prototype2.hpp  remap_rom.cpp  rom4.cpp  rom40.cpp  romdata.cpp  romdata.h  sad_mac.cpp  serial_modem.cpp  simm_test.cpp  test_hw.cpp  test_model_id.cpp  toolbox.cpp  via.cpp  wrapper.cpp  wrapper.hpp
BasiliskII/src/rom/disasm/: 0008C.S  02E00.S  02E8C.S  02F64.S  0309C.S  04052.S  04640.S  04672.S  046AA.S  046D8.S  04708.S  047B0.S  047CC.S  04866.S  04A5E.S  04A96.S  04AFE.S  04B0C.S  04B6C.S  04BE4.S  45C7C.S  45D36.S  45EA2.S  47928.S  4AA98.S  8AC00.S  B29C4.S  B98BC.S  B9A4E.S  B9F46.S  B9F78.S  B9FDA.S  B9FF6.S  BA0EA.S  BA11A.S  BA138.S  BA174.S  BA182.S  BD470.S  BD482.S  (+4 more)
BasiliskII/src/rom/script/: disasm.pl  disasm610.pl  dump_cpuid.pl  dump_cpuid650.pl  dump_raw.pl  extract_rom.pl  get_rom2.pl  make_proto.pl
BasiliskII/src/test/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  cpu.cpp  cpu_jit.cpp  exception.cpp  mmu1.cpp  mmu2.cpp  test.cpp  test_common.cpp  test_common.h  test_main.cpp  via.cpp
BasiliskII/src/test/arithmetic/: add.cpp  add.yaml  adda.yaml  addi.cpp  addi.yaml  addq.yaml  addx.yaml  cas.cpp  cas.yaml  cas2.yaml  chk.yaml  chk2.cpp  chk2.yaml  cmp.cpp  cmp.yaml  cmp2.cpp  cmp2.yaml  cmpa.yaml  cmpi.cpp  cmpi.yaml  cmpm.cpp  cmpm.yaml  divs.yaml  divu.yaml  muls.cpp  muls.yaml  mulu.yaml  neg.yaml  negx.cpp  negx.yaml  sub.cpp  sub.yaml  suba.cpp  suba.yaml  subi.cpp  subi.yaml  subq.yaml  subx.cpp  subx.yaml
BasiliskII/src/test/bcd/: abcd.cpp  abcd.yaml  nbcd.cpp  nbcd.yaml  pack.yaml  (+2 more)
BasiliskII/src/uae_cpu/: cpu_emulation.h  memory.h  newcpu.cpp
(+1943 files in other folders)
